--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@
 /build
 /captures
 .externalNativeBuild
+
+## TO MASK API KEY
+#/gradle.properties
+
 ### Android template
 # Built application files
 *.apk
